* Refactor circular dependency checking mechanism to dramatically improve performance
* Replaces dependencyChainTestMax value with circularDependencyTesting flag
* Refactor trace mechanism to better work with circular dependency checks
* Returns to ObjectIdentifier for keys (multi-module key issues seem to be due to multiple copies of Factory)

* Testing possible addition of Swift macros

## 2.5.3

* Fix unique scope resolution issue on container with non-unique default scope - PR #307
* Container.reset should also reset defaultScope and promiseTriggersError

## 2.5.2

* CocoaPods update for Factory, no FactoryTesting support

## 2.5.1

* Update preview helpers for both Containers and Factory's
* Additional documentation for SwiftUI and SwiftUI Previews

## 2.5.0

* Migration of import library name from Factory to FactoryKit (See README)
* Supports ParameterFactory service caching based on parameters (scopeOnParameters)
* FactoryKit library change corrects XCFramework build problems - Issue #252

## 2.4.13

* Supports ParameterFactory service caching based on parameters (scopeOnParameters)

## 2.4.12

* Add mock convenience function to SharedContainer for SwiftUI Previews
* New mechanism to enable StrictConcurrency in targets

## 2.4.11

* Pulled evolution support due to SPM .unsafe flags problem - Issue #289
* Same for strict concurrency check flags when building Factory module
* Add FactoryTesting library to Package.swift - PR #290 - DERP
* Fix typos in readme and documentation - PR #291

## 2.4.10

* Enables library evolution support on release builds - Issue #278
* Potential fix for differing ObjectIdentifiers for the same Factory when working across modules - Issue #277
* Enables strict concurrency check flags when building Factory module
* Miscellaneous code cleanup around globalVariableLock and eliminates globalDebugInformationMap

## 2.4.9

* Fix @Injected Unable to Satisfy Sendable Conformance error - Issue #248

## 2.4.8
